Fix commands and add datagrid

--- a/datagrid/index.html
+++ b/datagrid/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>@lumino/commands</title>
+	<title>@lumino/datagrid</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css">
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">@lumino/commands</a>
+					<a href="index.html" class="title">@lumino/datagrid</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -54,7 +54,7 @@
 					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1> @lumino/commands</h1>
+			<h1> @lumino/datagrid</h1>
 		</div>
 	</div>
 </header>
@@ -86,7 +86,40 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-class">
-						<a href="classes/commandregistry.html" class="tsd-kind-icon">Command<wbr>Registry</a>
+						<a href="classes/basickeyhandler.html" class="tsd-kind-icon">Basic<wbr>Key<wbr>Handler</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/basicmousehandler.html" class="tsd-kind-icon">Basic<wbr>Mouse<wbr>Handler</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/basicselectionmodel.html" class="tsd-kind-icon">Basic<wbr>Selection<wbr>Model</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/cellrenderer.html" class="tsd-kind-icon">Cell<wbr>Renderer</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/datagrid.html" class="tsd-kind-icon">Data<wbr>Grid</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/datamodel.html" class="tsd-kind-icon">Data<wbr>Model</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/graphicscontext.html" class="tsd-kind-icon">Graphics<wbr>Context</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/jsonmodel.html" class="tsd-kind-icon">JSONModel</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/renderermap.html" class="tsd-kind-icon">Renderer<wbr>Map</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/sectionlist.html" class="tsd-kind-icon">Section<wbr>List</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/selectionmodel.html" class="tsd-kind-icon">Selection<wbr>Model</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/textrenderer.html" class="tsd-kind-icon">Text<wbr>Renderer</a>
 					</li>
 				</ul>
 			</nav>
