--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
 <body>
 <h1>Lumino API Documentation</h1>
 <ul>
-  <li><a href="./coreutils/index.html">Coreutils</a></li>
   <li><a href="./algorithm/index.html">Algorithm</a></li>
-  <li><a href="./dragdrop/index.html">Dragdrop</a></li>
-  <li><a href="./datastore/index.html">Datastore</a></li>
-  <li><a href="./properties/index.html">Properties</a></li>
-  <li><a href="./commands/index.html">Commands</a></li>
   <li><a href="./application/index.html">Application</a></li>
-  <li><a href="./signaling/index.html">Signaling</a></li>
   <li><a href="./collections/index.html">Collections</a></li>
-  <li><a href="./messaging/index.html">Messaging</a></li>
-  <li><a href="./virtualdom/index.html">Virtualdom</a></li>
-  <li><a href="./domutils/index.html">Domutils</a></li>
-  <li><a href="./widgets/index.html">Widgets</a></li>
+  <li><a href="./commands/index.html">Commands</a></li>
+  <li><a href="./coreutils/index.html">Coreutils</a></li>
+  <li><a href="./datagrid/index.html">Datagrid</a></li>
+  <li><a href="./datastore/index.html">Datastore</a></li>
   <li><a href="./disposable/index.html">Disposable</a></li>
+  <li><a href="./domutils/index.html">Domutils</a></li>
+  <li><a href="./dragdrop/index.html">Dragdrop</a></li>
   <li><a href="./keyboard/index.html">Keyboard</a></li>
+  <li><a href="./messaging/index.html">Messaging</a></li>
+  <li><a href="./properties/index.html">Properties</a></li>
+  <li><a href="./signaling/index.html">Signaling</a></li>
+  <li><a href="./virtualdom/index.html">Virtualdom</a></li>
+  <li><a href="./widgets/index.html">Widgets</a></li>
 </ul>
 </body>
 
