--- a/datagrid/globals.html
+++ b/datagrid/globals.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>@lumino/commands</title>
+	<title>@lumino/datagrid</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css">
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">@lumino/commands</a>
+					<a href="index.html" class="title">@lumino/datagrid</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -54,31 +54,42 @@
 					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1> @lumino/commands</h1>
+			<h1> @lumino/datagrid</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<div class="tsd-panel tsd-typography">
-				<h1 id="lumino">Lumino</h1>
-				<p><a href="https://travis-ci.org/jupyterlab/lumino"><img src="https://travis-ci.org/jupyterlab/lumino.svg?branch=master" alt="Build Status"></a></p>
-				<p>Lumino is a set of JavaScript packages, written in TypeScript, that provide
-					a rich toolkit of widgets, layouts, events, and data structures. These enable
-					developers to construct extensible high-performance desktop-like web
-				applications, such as JupyterLab. Lumino was formerly known as PhosphorJS.</p>
-				<p>Lumino is Jupyter project and follows the Jupyter
-				<a href="https://jupyter.readthedocs.io/en/latest/community/content-community.html">Community Guides and Code of Conduct</a>.</p>
-				<h2 id="development">Development</h2>
-				<p>See <a href="./CONTRIBUTING.md">CONTRIBUTING.md</a> to know how to contribute and set up
-				a development environment.</p>
-			</div>
+			<section class="tsd-panel-group tsd-index-group">
+				<h2>Index</h2>
+				<section class="tsd-panel tsd-index-panel">
+					<div class="tsd-index-content">
+						<section class="tsd-index-section ">
+							<h3>Classes</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-class"><a href="classes/basickeyhandler.html" class="tsd-kind-icon">Basic<wbr>Key<wbr>Handler</a></li>
+								<li class="tsd-kind-class"><a href="classes/basicmousehandler.html" class="tsd-kind-icon">Basic<wbr>Mouse<wbr>Handler</a></li>
+								<li class="tsd-kind-class"><a href="classes/basicselectionmodel.html" class="tsd-kind-icon">Basic<wbr>Selection<wbr>Model</a></li>
+								<li class="tsd-kind-class"><a href="classes/cellrenderer.html" class="tsd-kind-icon">Cell<wbr>Renderer</a></li>
+								<li class="tsd-kind-class"><a href="classes/datagrid.html" class="tsd-kind-icon">Data<wbr>Grid</a></li>
+								<li class="tsd-kind-class"><a href="classes/datamodel.html" class="tsd-kind-icon">Data<wbr>Model</a></li>
+								<li class="tsd-kind-class"><a href="classes/graphicscontext.html" class="tsd-kind-icon">Graphics<wbr>Context</a></li>
+								<li class="tsd-kind-class"><a href="classes/jsonmodel.html" class="tsd-kind-icon">JSONModel</a></li>
+								<li class="tsd-kind-class"><a href="classes/renderermap.html" class="tsd-kind-icon">Renderer<wbr>Map</a></li>
+								<li class="tsd-kind-class"><a href="classes/sectionlist.html" class="tsd-kind-icon">Section<wbr>List</a></li>
+								<li class="tsd-kind-class"><a href="classes/selectionmodel.html" class="tsd-kind-icon">Selection<wbr>Model</a></li>
+								<li class="tsd-kind-class"><a href="classes/textrenderer.html" class="tsd-kind-icon">Text<wbr>Renderer</a></li>
+							</ul>
+						</section>
+					</div>
+				</section>
+			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
 				<ul>
-					<li class="globals  ">
+					<li class="globals current ">
 						<a href="globals.html"><em>Globals</em></a>
 					</li>
 				</ul>
@@ -86,7 +97,40 @@
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-class">
-						<a href="classes/commandregistry.html" class="tsd-kind-icon">Command<wbr>Registry</a>
+						<a href="classes/basickeyhandler.html" class="tsd-kind-icon">Basic<wbr>Key<wbr>Handler</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/basicmousehandler.html" class="tsd-kind-icon">Basic<wbr>Mouse<wbr>Handler</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/basicselectionmodel.html" class="tsd-kind-icon">Basic<wbr>Selection<wbr>Model</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/cellrenderer.html" class="tsd-kind-icon">Cell<wbr>Renderer</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/datagrid.html" class="tsd-kind-icon">Data<wbr>Grid</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/datamodel.html" class="tsd-kind-icon">Data<wbr>Model</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/graphicscontext.html" class="tsd-kind-icon">Graphics<wbr>Context</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/jsonmodel.html" class="tsd-kind-icon">JSONModel</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/renderermap.html" class="tsd-kind-icon">Renderer<wbr>Map</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/sectionlist.html" class="tsd-kind-icon">Section<wbr>List</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/selectionmodel.html" class="tsd-kind-icon">Selection<wbr>Model</a>
+					</li>
+					<li class=" tsd-kind-class">
+						<a href="classes/textrenderer.html" class="tsd-kind-icon">Text<wbr>Renderer</a>
 					</li>
 				</ul>
 			</nav>
