--- a/datagrid/interfaces/basicselectionmodel.selectionmodel.ioptions.html
+++ b/datagrid/interfaces/basicselectionmodel.selectionmodel.ioptions.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>@lumino/commands</title>
+	<title>IOptions | @lumino/datagrid</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="assets/css/main.css">
+	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
 <header>
 	<div class="tsd-page-toolbar">
 		<div class="container">
 			<div class="table-wrap">
-				<div class="table-cell" id="tsd-search" data-index="assets/js/search.js" data-base=".">
+				<div class="table-cell" id="tsd-search" data-index="../assets/js/search.js" data-base="..">
 					<div class="field">
 						<label for="tsd-search-field" class="tsd-widget search no-caption">Search</label>
 						<input id="tsd-search-field" type="text" />
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">@lumino/commands</a>
+					<a href="../index.html" class="title">@lumino/datagrid</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -51,42 +51,125 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="globals.html">Globals</a>
+					<a href="../globals.html">Globals</a>
+				</li>
+				<li>
+					<a href="../classes/basicselectionmodel.html">BasicSelectionModel</a>
+				</li>
+				<li>
+					<a href="../modules/basicselectionmodel.selectionmodel.html">SelectionModel</a>
+				</li>
+				<li>
+					<a href="basicselectionmodel.selectionmodel.ioptions.html">IOptions</a>
 				</li>
 			</ul>
-			<h1> @lumino/commands</h1>
+			<h1>Interface IOptions</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<div class="tsd-panel tsd-typography">
-				<h1 id="lumino">Lumino</h1>
-				<p><a href="https://travis-ci.org/jupyterlab/lumino"><img src="https://travis-ci.org/jupyterlab/lumino.svg?branch=master" alt="Build Status"></a></p>
-				<p>Lumino is a set of JavaScript packages, written in TypeScript, that provide
-					a rich toolkit of widgets, layouts, events, and data structures. These enable
-					developers to construct extensible high-performance desktop-like web
-				applications, such as JupyterLab. Lumino was formerly known as PhosphorJS.</p>
-				<p>Lumino is Jupyter project and follows the Jupyter
-				<a href="https://jupyter.readthedocs.io/en/latest/community/content-community.html">Community Guides and Code of Conduct</a>.</p>
-				<h2 id="development">Development</h2>
-				<p>See <a href="./CONTRIBUTING.md">CONTRIBUTING.md</a> to know how to contribute and set up
-				a development environment.</p>
-			</div>
+			<section class="tsd-panel tsd-comment">
+				<div class="tsd-comment tsd-typography">
+					<div class="lead">
+						<p>An options object for initializing a selection model.</p>
+					</div>
+				</div>
+			</section>
+			<section class="tsd-panel tsd-hierarchy">
+				<h3>Hierarchy</h3>
+				<ul class="tsd-hierarchy">
+					<li>
+						<span class="target">IOptions</span>
+					</li>
+				</ul>
+			</section>
+			<section class="tsd-panel-group tsd-index-group">
+				<h2>Index</h2>
+				<section class="tsd-panel tsd-index-panel">
+					<div class="tsd-index-content">
+						<section class="tsd-index-section ">
+							<h3>Properties</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="basicselectionmodel.selectionmodel.ioptions.html#datamodel" class="tsd-kind-icon">data<wbr>Model</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="basicselectionmodel.selectionmodel.ioptions.html#selectionmode" class="tsd-kind-icon">selection<wbr>Mode</a></li>
+							</ul>
+						</section>
+					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="datamodel" class="tsd-anchor"></a>
+					<h3>data<wbr>Model</h3>
+					<div class="tsd-signature tsd-kind-icon">data<wbr>Model<span class="tsd-signature-symbol">:</span> <a href="../classes/datamodel.html" class="tsd-signature-type">DataModel</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/jupyterlab/lumino/blob/609f8599/packages/datagrid/src/selectionmodel.ts#L320">selectionmodel.ts:320</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The data model for the selection model.</p>
+						</div>
+					</div>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="selectionmode" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> selection<wbr>Mode</h3>
+					<div class="tsd-signature tsd-kind-icon">selection<wbr>Mode<span class="tsd-signature-symbol">:</span> <a href="../modules/basicselectionmodel.selectionmodel.html#selectionmode" class="tsd-signature-type">SelectionMode</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/jupyterlab/lumino/blob/609f8599/packages/datagrid/src/selectionmodel.ts#L327">selectionmodel.ts:327</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>The selection mode for the model.</p>
+						</div>
+						<p>The default is <code>&#39;cell&#39;</code>.</p>
+					</div>
+				</section>
+			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
 				<ul>
 					<li class="globals  ">
-						<a href="globals.html"><em>Globals</em></a>
+						<a href="../globals.html"><em>Globals</em></a>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
-					<li class=" tsd-kind-class">
-						<a href="classes/commandregistry.html" class="tsd-kind-icon">Command<wbr>Registry</a>
+				</ul>
+				<ul class="current">
+					<li class="current tsd-kind-interface tsd-parent-kind-module">
+						<a href="basicselectionmodel.selectionmodel.ioptions.html" class="tsd-kind-icon">IOptions</a>
+						<ul>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="basicselectionmodel.selectionmodel.ioptions.html#datamodel" class="tsd-kind-icon">data<wbr>Model</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="basicselectionmodel.selectionmodel.ioptions.html#selectionmode" class="tsd-kind-icon">selection<wbr>Mode</a>
+							</li>
+						</ul>
+					</li>
+				</ul>
+				<ul class="after-current">
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/basicselectionmodel.selectionmodel.html#clearmode" class="tsd-kind-icon">Clear<wbr>Mode</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/basicselectionmodel.selectionmodel.html#selectargs" class="tsd-kind-icon">Select<wbr>Args</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/basicselectionmodel.selectionmodel.html#selection" class="tsd-kind-icon">Selection</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-parent-kind-module">
+						<a href="../modules/basicselectionmodel.selectionmodel.html#selectionmode" class="tsd-kind-icon">Selection<wbr>Mode</a>
 					</li>
 				</ul>
 			</nav>
@@ -156,7 +239,7 @@
 	<p>Generated using <a href="http://typedoc.org/" target="_blank">TypeDoc</a></p>
 </div>
 <div class="overlay"></div>
-<script src="assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="assets/js/search.js"><' + '/script>');</script>
+<script src="../assets/js/main.js"></script>
+<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
